--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.68.0",
     "stripe": "^20.0.0",
+    "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13",
