--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "^18",
     "react-hook-form": "^7.68.0",
+    "sonner": "^2.0.7",
     "stripe": "^20.0.0",
     "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
