--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.33",
     "postcss": "^8",
